sonarqube8/base/postgresql-dc.yaml
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  annotations:
    argocd.argoproj.io/sync-wave: "1"
  labels:
    app: sonarqube
    app.kubernetes.io/component: postgresql-sonarqube-dc
    app.kubernetes.io/instance: sonarqube
    app.kubernetes.io/part-of: sonarqube
    deploymentconfig: postgresql-sonarqube
  name: postgresql-sonarqube
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    name: postgresql-sonarqube
    app: sonarqube
    deploymentconfig: postgresql-sonarqube
  strategy:
    activeDeadlineSeconds: 21600
    recreateParams:
      timeoutSeconds: 600
    resources: {}
    type: Recreate
  template:
    metadata:
      name: postgresql-sonarqube
      labels:
        app: sonarqube
        name: postgresql-sonarqube
        deploymentconfig: postgresql-sonarqube
    spec:
      containers:
      - env:
        - name: POSTGRESQL_USER
          value: sonar
        - name: POSTGRESQL_PASSWORD
          value: kHPdpIYtdtGXeStv
        - name: POSTGRESQL_DATABASE
          value: sonar
        imagePullPolicy: IfNotPresent
        livenessProbe:
          failureThreshold: 3
          initialDelaySeconds: 30
          periodSeconds: 10
          successThreshold: 1
          tcpSocket:
            port: 5432
          timeoutSeconds: 1
        name: postgresql
        ports:
        - containerPort: 5432
          protocol: TCP
        readinessProbe:
          exec:
            command:
            - /bin/sh
            - -i
            - -c
            - psql -h 127.0.0.1 -U $POSTGRESQL_USER -q -d $POSTGRESQL_DATABASE -c
              'SELECT 1'
          failureThreshold: 3
          initialDelaySeconds: 5
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        resources:
          limits:
            memory: 256Mi
        securityContext:
          capabilities: {}
          privileged: false
          procMount: Default
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /var/lib/pgsql/data
          name: postgresql-data
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
      volumes:
      - name: postgresql-data
        persistentVolumeClaim:
          claimName: postgresql-sonarqube-data
  test: false
  triggers:
  - imageChangeParams:
      automatic: true
      containerNames:
      - postgresql
      from:
        kind: ImageStreamTag
        name: postgresql:9.6
        namespace: openshift
    type: ImageChange
  - type: ConfigChange
