sonarqube8/base/postgresql-svc.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    argocd.argoproj.io/sync-wave: "10"
  labels:
    app: sonarqube
    app.kubernetes.io/component: postgresql-sonarqube-svc
    app.kubernetes.io/instance: sonarqube
    app.kubernetes.io/part-of: sonarqube
  name: postgresql-sonarqube
spec:
  ports:
  - name: postgresql
    port: 5432
    protocol: TCP
    targetPort: 5432
  selector:
    app: sonarqube
    deploymentconfig: postgresql-sonarqube
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
