sonarqube8/base/sonarqube-svc.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    argocd.argoproj.io/sync-wave: "11"
  labels:
    app: sonarqube
    app.kubernetes.io/component: sonarqube-svc
    app.kubernetes.io/instance: sonarqube
    app.kubernetes.io/part-of: sonarqube
  name: sonarqube
spec:
  ports:
  - name: sonarqube
    port: 9000
    protocol: TCP
    targetPort: 9000
  selector:
    app: sonarqube
    deploymentconfig: sonarqube
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
