sonarqube8/base/sonarqube-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    haproxy.router.openshift.io/timeout: 4m
    template.openshift.io/expose-uri: http://{.spec.host}{.spec.path}
  labels:
    app: sonarqube
    app.kubernetes.io/component: sonarqube-route
    app.kubernetes.io/instance: sonarqube
    app.kubernetes.io/part-of: sonarqube
  name: sonarqube
spec:
  host: sonarqube-cicd.apps.example.com
  to:
    kind: Service
    name: sonarqube
    weight: 100
  wildcardPolicy: None
status:
  ingress: []
